# backend/docs/swagger.yaml
@@ -9,6 +9,24 @@ definitions:
       user_id:
         type: string
     type: object
+  handlers.CheckoutRequest:
+    properties:
+      campaign_ids:
+        items:
+          type: string
+        type: array
+      point_used:
+        type: integer
+      user_id:
+        type: string
+    type: object
+  handlers.CheckoutResponse:
+    properties:
+      message:
+        type: string
+      total_price:
+        type: number
+    type: object
   handlers.DeleteCartItemRequest:
     properties:
       product_id:
@@ -407,6 +425,36 @@ paths:
       summary: Get cart items for a user
       tags:
       - Cart
+  /checkout:
+    post:
+      consumes:
+      - application/json
+      description: Calculate total price, apply campaigns, and store transaction history
+      parameters:
+      - description: Checkout payload
+        in: body
+        name: checkout
+        required: true
+        schema:
+          $ref: '#/definitions/handlers.CheckoutRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handlers.CheckoutResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+      summary: Checkout cart items
+      tags:
+      - Checkout
   /guestregister:
     post:
       consumes:
